:bug: empty array 가 아닌 empty string 을 원소로 하는 배열이 생성되는 버그 수정